--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-security.basic.enabled=false
+security.basic.enabled=true
 local.storage.enabled=false
 remote.storage.enabled=false
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://195.181.220.129:3306/admin_financial
+spring.datasource.username=admin_finadmin
+spring.datasource.password=biqkC5lByO
