--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 security.basic.enabled=true
+
 local.storage.enabled=false
 remote.storage.enabled=false
+
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
 
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://195.181.220.129:3306/admin_financial
